--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <h1>EBAC Shoes</h1>
                 <div class="menu">
                     <ul>
-                        <li>Sobre a loja</li>
-                        <li>Produtos</li>
+                        <li><a href="#sobre-a-loja">Sobre a loja</a></li>
+                        <li><a href="#produtos">Produtos</a></li>
                     </ul>
                 </div>
             </div>
